api-contract-init